index.html changed

--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
     />
     <meta
       itemprop="image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/Prs96/portfolio-website/refs/heads/main/Images/image.png"
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://soumyajit.vercel.app" />
+    <meta property="og:url" content="https://pranavs.is-a.dev" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pranav S | Portfolio" />
     <meta
@@ -37,7 +37,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/Prs96/portfolio-website/refs/heads/main/Images/image.png"
     />
 
     <!-- Twitter Meta Tags -->
@@ -49,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/Prs96/portfolio-website/refs/heads/main/Images/image.png"
     />
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
